discussion/kv_engine/175243/175243_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Memcached style buckets is not supported in serverless mode

They're deprecated and we don't want them to sneak into use
in serverless deployments

Change-Id: Iea6aec129f5908a9976537b7e43460316569d810

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-05-24 08:35:25.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-24 09:23:57.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17696/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/create_remove_bucket_command_context.cc:46:9: error: use of undeclared identifier "isServerlessDeployment" [clang-diagnostic-error]
    if (isServerlessDeployment() && type == BucketType::Memcached) {
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17696/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/create_remove_bucket_command_context.cc:46:9:
error: use of undeclared identifier "isServerlessDeployment" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17696/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38958/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/create_remove_bucket_command_context.cc:46:9:
error: use of undeclared identifier "isServerlessDeployment"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38958/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16722/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46357/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7308/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19822/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20486/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19472/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18672/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27871/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7409/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
